# MediPreDiag-Agent

./: .env.example  .gitignore  agent_relationship.html  agent。md  docker-compose.yml  pyproject.toml
docs/: 简历项目描述.md  设计合规性验证报告.md  面试背诵话术_美化版.md  面试问答记录_原版.md  项目问题与解决方案报告.md
eval/: run_evaluation.py
scripts/: build_knowledge.py  dump_rag.py  fetch_pubmed.py  ingest_knowledge.py  init.sql  rag_raw_output.txt  test_pdf.py  verify.py  verify_rag.py
src/: config.py  main.py
src/agents/: drug_qa_agent.py  graph.py  location_agent.py  medical_advisor.py  memory_nodes.py  response_synthesizer.py  severity_evaluator.py  state.py  symptom_agent.py
src/db/: milvus_client.py  mysql.py  redis_client.py
src/handlers/: cancel_registry.py  interrupt.py
src/intent/: classifier.py
src/memory/: fallback.py  long_term.py  short_term.py
src/rag/: retriever.py
src/routes/: chat.py  ws.py
src/schemas/: __init__.py
src/tools/: amap_poi.py  drug_info.py
static/: index.html
