[project]
name = "mediprediag-agent"
version = "1.0.0"
description = "Multi-Agent Collaborative Medical Pre-Diagnosis System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "openai>=1.50.0",
    "pymilvus>=2.4.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "jieba>=0.42.1",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.9",
    "pillow>=10.0.0",
    "aiofiles>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]